--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,20 @@
 <script src="script.js"></script>
 </head>
 <body>
-    <div>
+    <header>
         <div class="logo"></div>
-    </div>
+    </header>
     <div class="wrapper">
         <div class="sidebar"></div>
         <div class="contentbar"></div>
     </div>
-    <footer></footer>
+    <footer>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div> 
+    </footer>
 </body>
 </html>
